--- a/proteinas-tracker/requirements.txt
+++ b/proteinas-tracker/requirements.txt
@@ -1,3 +1,8 @@
+requests
+pandas
+beautifulsoup4
+google-cloud-bigquery
+
 {\rtf1\ansi\ansicpg1252\cocoartf2867
 \cocoatextscaling0\cocoaplatform0{\fonttbl\f0\fswiss\fcharset0 Helvetica;}
 {\colortbl;\red255\green255\blue255;}
