--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          pip install -r proteinas-tracker/requirements.txt
 
       - name: Prepare Google credentials
         env:
@@ -35,7 +35,8 @@ jobs:
           BQ_DATASET: ${{ secrets.BQ_DATASET }}
           BQ_TABLE: ${{ secrets.BQ_TABLE }}
         run: |
-          python etl/a_e_i/fetch_aei.py
-          python etl/cdti/fetch_cdti.py
-          python etl/ccaa/madrid.py
+          python proteinas-tracker/etl/a_e_i/fetch_aei.py
+          python proteinas-tracker/etl/cdti/fetch_cdti.py
+          python proteinas-tracker/etl/ccaa/madrid.py
+
         
